@@ -1,15 +1,0 @@
-REM arithmetic operator test
-if 4 < 5 then print "PASS <"
-if 5 < 4 then print "FAIL <"
-if 5 > 4 then print "PASS >"
-if 4 > 5 then print "FAIL >"
-if 4 <= 5 then print "PASS <="
-if 5 <= 5 then print "PASS <="
-if 5 <= 4 then print "FAIL <="
-if 4 >= 4 then print "PASS >="
-if 5 >= 5 then print "PASS >="
-if 4 >= 5 then print "FAIL >="
-if 4 = 4 then print "PASS ="
-if 4 = 5 then print "FAIL ="
-if 4 <> 5 then print "PASS <>"
-if 4 <> 4 then print "FAIL <>"
