@@ -1,35 +1,0 @@
-print "Using Newton's laws to make the ball bounce realistically"
-
-rem set up initial ball position and speed
-x = 20
-y = 100
-r = 10
-yvel = -10.0
-xvel = 10.0
-yacc = .98
-fastgraphics
-
- 
-loop1:
-  clg
-  rem change the downward velocity according to the acceleration
-  yvel = yvel + yacc
-  y = y + yvel
-  x = x + xvel
-  if y > 289 then yvel = -0.9 * yvel : y = 289 : xvel = xvel * 0.9
-  if x > 285 then xvel = -xvel : x = 285
-  if x < 10 then xvel = -xvel : x = 10
-  color darkblue
-  rect 0,0,300,300
-  gosub drawBall
-  if xvel * xvel < 0.0001 then end
-  goto loop1
- 
-drawBall:
-  color darkgray
-  circle x, y, r
-  color gray
-  circle x, y, r - 2
-  refresh
-  return
-
